--- a/css/header.css
+++ b/css/header.css
@@ -38,3 +38,12 @@
     color: #122c52;
 }
 
+.btn-login{
+    border: 2px solid #122c52;
+    margin-right: 20px;
+    border-radius: 10px;
+}
+
+.btn-login:hover{
+    background-color: white;
+}
